--- a/package.json
+++ b/package.json
@@ -1,15 +1,38 @@
 {
   "name": "@agapi-development-tools/eslint-config",
-  "version": "0.0.0",
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "8.46.0",
-    "@typescript-eslint/parser": "8.46.0",
-    "eslint-config-prettier": "10.1.8",
-    "eslint-config-semistandard": "17.0.0",
-    "eslint-config-turbo": "2.5.8",
-    "eslint-plugin-svelte": "3.12.4"
+  "version": "1.0.0",
+  "type": "module",
+  "packageManager": "pnpm@10.18.3",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./package.json": "./package.json"
   },
-  "publishConfig": {
-    "access": "public"
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "prepublishOnly": "npm run build",
+    "check": "sh -c 'eslint --print-config eslint.config.ts | grep \"$1\" -A 5' sh",
+    "check:all": "eslint --print-config eslint.config.ts"
+  },
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "8.46.2",
+    "eslint-plugin-svelte": "3.12.5",
+    "typescript-eslint": "8.46.2",
+    "svelte-eslint-parser": "1.4.0",
+    "@eslint/js": "9.38.0",
+    "globals": "16.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "22.12.0",
+    "typescript": "5.9.3",
+    "eslint": "9.38.0",
+    "jiti": "2.6.1"
   }
 }
