--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@agapi-development-tools/eslint-config",
   "version": "1.0.0",
   "type": "module",
-  "packageManager": "pnpm@10.18.3",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -22,17 +21,22 @@
     "check:all": "eslint --print-config eslint.config.ts"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "8.46.2",
-    "eslint-plugin-svelte": "3.12.5",
-    "typescript-eslint": "8.46.2",
-    "svelte-eslint-parser": "1.4.0",
+    "@eslint/compat": "1.4.1",
+    "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.38.0",
-    "globals": "16.4.0"
+    "@next/eslint-plugin-next": "15.4.4",
+    "@typescript-eslint/eslint-plugin": "8.46.2",
+    "eslint-config-next": "15.4.4",
+    "eslint-plugin-svelte": "3.12.5",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "globals": "16.4.0",
+    "svelte-eslint-parser": "1.4.0",
+    "typescript-eslint": "8.46.2"
   },
   "devDependencies": {
+    "@eslint/core": "0.17.0",
     "@types/node": "22.12.0",
     "typescript": "5.9.3",
-    "eslint": "9.38.0",
-    "jiti": "2.6.1"
+    "eslint": "9.38.0"
   }
 }
